lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:2: error: value >-< is not a member of Double
if(getVitesseY()>-<6)
                ^